<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_transfer">

    <fragment
        android:id="@+id/navigation_transfer"
        android:name="com.swiftshare.TransferFragment"
        android:label="@string/title_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.swiftshare.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.swiftshare.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
